[project]
name = "comfyui_tinyterranodes"
description = "Customizable xyPlot, various pipe nodes, fullscreen image viewer based on node history, dynamic widgets, interface customization, and more."
version = "2.0.1"
license = "LICENSE"

[project.urls]
Repository = ""

[tool.comfy]
PublisherId = "robinjhuang"
DisplayName = "robinNodes"
Icon = "images/icon.jpg"
Models = []
